[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/logo.png" type="Texture" id=1]
[ext_resource path="res://assets/godot-logo-small.png" type="Texture" id=2]
[ext_resource path="res://framework/controls/panels/credits_panel.gd" type="Script" id=3]
[ext_resource path="res://framework/controls/panels/third_party_licenses_panel.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.835294 )

[node name="CreditsPanel" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
window_title = "Credits"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingLeft" type="Control" parent="HBoxContainer"]
margin_right = 29.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 33.0
margin_right = 266.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingTop" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 233.0
margin_bottom = 27.0
size_flags_vertical = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 233.0
margin_bottom = 58.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer/Control"]
margin_left = 14.7018
margin_top = -7.60669
margin_right = 272.702
margin_bottom = 36.3933
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 233.0
margin_bottom = 67.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="LinkButton2" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 233.0
margin_bottom = 125.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/LinkButton2"]
margin_top = 18.0
margin_right = 233.0
margin_bottom = 42.0
size_flags_vertical = 1
text = "Created by Levi Lindsey."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="HBoxContainer/VBoxContainer/LinkButton2"]
margin_left = 68.1648
margin_top = 37.3561
margin_right = 165.165
margin_bottom = 65.3561
size_flags_horizontal = 0
text = "https://levi.dev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control5" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 233.0
margin_bottom = 156.0
size_flags_vertical = 3

[node name="Control2" type="LinkButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 233.0
margin_bottom = 227.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/Control2"]
margin_left = 61.1648
margin_top = 1.49451
margin_right = 173.165
margin_bottom = 45.4945
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Control2/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 91.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotLogo" type="TextureRect" parent="HBoxContainer/VBoxContainer/Control2/Panel/Control"]
margin_left = -1.94739
margin_top = -1.83856
margin_right = 724.053
margin_bottom = 247.161
rect_scale = Vector2( 0.14, 0.14 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Control2"]
margin_left = 0.349182
margin_top = 43.9667
margin_right = 233.349
margin_bottom = 69.9667
size_flags_vertical = 1
text = "Created using Godot."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 233.0
margin_bottom = 236.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control3" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 233.0
margin_bottom = 267.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/Control3"]
margin_left = 24.3741
margin_top = 7.8689
margin_right = 215.374
margin_bottom = 41.8689
text = "Show third-party licenses"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingBottom" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 233.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="PaddingRight" type="Control" parent="HBoxContainer"]
margin_left = 270.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="ThirdPartyLicensesPanel" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/LinkButton2" to="." method="_on_levi_link_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Control2" to="." method="_on_godot_link_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Control3/Button" to="." method="_on_third_party_licenses_button_pressed"]
